--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.3.1",
     "react-chatbot-kit": "^2.1.2",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -43,6 +44,6 @@
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.7.1",
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.2.0"
   }
 }
